--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,23 +1,43 @@
 # Dependencies
 node_modules/
-package-lock.json
+# Note: package-lock.json should be committed for reproducible builds
 
 # Environment variables
 .env
 .env.local
 .env.*.local
+.env.production
+.env.development
 
 # Logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+logs/
 
 # OS
 .DS_Store
 Thumbs.db
+Desktop.ini
 
 # IDE
 .vscode/
+!.vscode/extensions.json
 .idea/
 *.swp
 *.swo
+*~
+
+# Build outputs
+dist/
+build/
+*.tmp
+*.temp
+
+# Coverage and testing
+coverage/
+.nyc_output/
 
