--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@vitejs/plugin-react": "^5.1.1",
     "axios": "^1.13.2",
+    "docx": "^9.5.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
